--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
     padding: 20px;
     text-align: center;
 }
+h1 {
+  color: rgba(16, 185, 129, 0.6);
+}
 
 ul {
     list-style-type: none;
@@ -103,12 +106,33 @@ button:hover .transition {
 button:active {
     transform: scale(0.97);
   }
+  
+form {
+    box-shadow: 0 4px 8px 0 rgba(16, 185, 129, 0.6);
+    transition: 0.3s;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    margin: 20px;
+    width: 300px;
+    height: 400px;
+    border: 3px solid rgba(16, 185, 129, 0.6);
+    border-radius: 15px;
+}
+form:hover {
+    box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
 
 .input {
     background-color: white;
     max-width: 190px;
     height: 30px;
     padding: 10px;
+    margin: 15px;
     border: 2px solid rgba(16, 185, 129, 0.6);
     border-radius: 10px;
   
@@ -148,7 +172,3 @@ button:active {
     padding: 30px;
     margin: 10px;
   }
-form {
-  padding: 30px;
-  margin: 10px;
-}
